--- a/.github/workflows/develop_heroes-society-api.yml
+++ b/.github/workflows/develop_heroes-society-api.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - develop
+    paths-ignore:
+      - 'README.md'
   workflow_dispatch:
 
 jobs:
@@ -23,9 +25,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          npm install -g @nestjs/cli
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
